@@ -1,5 +1,5 @@
 /*  mdfdg.c --  access MDF data groups
-    Copyright (C) 2012,2013 Andreas Heitmann
+    Copyright (C) 2012-2015 Andreas Heitmann
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
